# vst3_public_sdk

./: .gitmodules  CMakeLists.txt  README.md
samples/vst/: CMakeLists.txt  doc.h
samples/vst-hosting/: CMakeLists.txt
samples/vst-hosting/audiohost/: CMakeLists.txt  README.md
samples/vst-hosting/audiohost/resource/: Info.plist
samples/vst-hosting/audiohost/source/: audiohost.cpp  audiohost.h  usediids.cpp
samples/vst-hosting/audiohost/source/media/: audioclient.cpp  audioclient.h  imediaserver.h  iparameterclient.h  miditovst.h
samples/vst-hosting/audiohost/source/media/jack/: jackclient.cpp
samples/vst-hosting/audiohost/source/platform/: appinit.h  iapplication.h
samples/vst-hosting/editorhost/: CMakeLists.txt  README.md
samples/vst-hosting/editorhost/resource/: Info.plist
samples/vst-hosting/editorhost/source/: editorhost.cpp  editorhost.h  usediids.cpp
samples/vst-hosting/editorhost/source/platform/: appinit.h  iapplication.h  iplatform.h  iwindow.h
samples/vst-hosting/editorhost/source/platform/linux/: irunloopimpl.h  platform.cpp  runloop.cpp  runloop.h  window.cpp  window.h
samples/vst-hosting/editorhost/source/platform/mac/: platform.mm  window.h  window.mm
samples/vst-hosting/editorhost/source/platform/win32/: platform.cpp  window.cpp  window.h
samples/vst-hosting/inspectorapp/: CMakeLists.txt  README.md
samples/vst-hosting/inspectorapp/source/: app.cpp  window.cpp  window.h
samples/vst-hosting/validator/: CMakeLists.txt  README.md
samples/vst-hosting/validator/source/: main.cpp  testsuite.h  usediids.cpp  validator.cpp  validator.h
samples/vst-utilities/moduleinfotool/: CMakeLists.txt
samples/vst/InterAppAudio/: CMakeLists.txt
samples/vst/adelay/: CMakeLists.txt  README.md
samples/vst/adelay/resource/: Info.plist  adelay.rc
samples/vst/adelay/source/: adelaycontroller.cpp  adelaycontroller.h  adelayids.h  adelayprocessor.cpp  adelayprocessor.h  exampletest.cpp  exampletest.h  factory.cpp  version.h
samples/vst/again/: CMakeLists.txt  README.md
samples/vst/again/resource/: again.rc
samples/vst/again/source/: again.cpp  again.h  againcids.h  againcontroller.cpp  againcontroller.h  againentry.cpp  againentry_vst2.cpp  againparamids.h  againprocess.h  againsidechain.cpp  againsidechain.h  againsimple.cpp  againsimple.h  againuimessagecontroller.h  version.h
samples/vst/again_aax/: CMakeLists.txt  README.md  readme.txt
samples/vst/again_aax/source/: againaax.cpp
samples/vst/again_sampleaccurate/: CMakeLists.txt  README.md
samples/vst/again_sampleaccurate/source/: agsa.h  agsa_controller.cpp  agsa_factory.cpp  agsa_processor.cpp  tutorial.cpp  tutorial.h  version.h
samples/vst/dataexchange/: CMakeLists.txt  README.md
samples/vst/dataexchange/resource/: editor.uidesc
samples/vst/dataexchange/source/: controller.cpp  factory.cpp  processor.cpp  shared.h  version.h  waveformview.cpp  waveformview.h  waveformview_direct3d.cpp  waveformview_metal.mm
samples/vst/note_expression_synth/: CMakeLists.txt  README.md
samples/vst/note_expression_synth/resource/: Info.plist  note_expression_synth.rc  note_expression_synth.uidesc
samples/vst/note_expression_synth/source/: brownnoise.h  factory.cpp  filter.h  note_expression_synth_controller.cpp  note_expression_synth_controller.h  note_expression_synth_processor.cpp  note_expression_synth_processor.h  note_expression_synth_ui.cpp  note_expression_synth_ui.h  note_expression_synth_voice.cpp  note_expression_synth_voice.h  note_touch_controller.cpp  note_touch_controller.h  version.h
samples/vst/note_expression_text/: CMakeLists.txt  README.md
samples/vst/note_expression_text/resource/: plug.rc
samples/vst/note_expression_text/source/: plug.cpp  plug.h  plugcids.h  plugcontroller.cpp  plugcontroller.h  plugentry.cpp  plugparamids.h  version.h
samples/vst/panner/: CMakeLists.txt  README.md
samples/vst/panner/include/: plugcontroller.h  plugids.h  plugprocessor.h  version.h
samples/vst/panner/resource/: plug.rc
samples/vst/panner/source/: plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
samples/vst/pitchnames/: CMakeLists.txt  README.md
samples/vst/pitchnames/resource/: Info.plist  pitchnames.rc
samples/vst/pitchnames/source/: factory.cpp  pitchnames.cpp  pitchnames.h  pitchnamesdatabrowsersource.cpp  pitchnamesdatabrowsersource.h  version.h
source/: vst3stdsdk.cpp
source/common/: commoniids.cpp  memorystream.cpp  memorystream.h  openurl.cpp  openurl.h  pluginview.cpp  pluginview.h  systemclipboard.h  systemclipboard_linux.cpp  systemclipboard_mac.mm  systemclipboard_win32.cpp  threadchecker.h  threadchecker_linux.cpp  threadchecker_mac.mm  threadchecker_win32.cpp
source/main/: dllmain.cpp  linuxmain.cpp  macmain.cpp  moduleinit.cpp  moduleinit.h  pluginfactory.cpp  pluginfactory.h  pluginfactory_constexpr.h  pluginfactoryvst3.cpp
source/vst/: vstaudioeffect.cpp  vstaudioeffect.h  vstaudioprocessoralgo.h  vstbus.cpp  vstbus.h  vstbypassprocessor.cpp  vstbypassprocessor.h  vstcomponent.cpp  vstcomponent.h  vstcomponentbase.cpp  vstcomponentbase.h  vsteditcontroller.cpp  vsteditcontroller.h  vsteventshelper.h  vstgui_win32_bundle_support.cpp  vstgui_win32_bundle_support.h  vstguieditor.cpp  vstguieditor.h  vsthelpers.h  vstinitiids.cpp  vstnoteexpressiontypes.cpp  vstnoteexpressiontypes.h  vstparameters.cpp  vstparameters.h  vstpresetfile.cpp  vstpresetfile.h  vstrepresentation.cpp  vstrepresentation.h  vstsinglecomponenteffect.cpp  vstsinglecomponenteffect.h  vstspeakerarray.h
source/vst/auwrapper/: CMakeLists.txt  NSDataIBStream.h  NSDataIBStream.mm  aucarbonview.h  aucarbonview.mm  aucocoaview.h  aucocoaview.mm  auresource.r  ausdk.mm  auwrapper.h  auwrapper.mm  auwrapper_prefix.pch  docAUv2.h  usediids.cpp
source/vst/auwrapper/again/: CMakeLists.txt  Info.plist  audiounitconfig.h  doc.cpp
source/vst/auwrapper/again/config/: again.xcconfig  again_debug.xcconfig  again_release.xcconfig
source/vst/auwrapper/config/: ausdkpath.xcconfig  auwrapper.xcconfig  auwrapper_debug.xcconfig  auwrapper_release.xcconfig
source/vst/hosting/: module.h  (+24 more)
(+481 files in other folders)
